[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "unofficial-api-for-redtube"
version = "1.2"
description = "An asynchronous API wrapper and scraper for redtube.com"
authors = [
  {name = "EchterAlsFake", email = "EchterAlsFake@proton.me"}
]
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["redtube", "porn", "api", "web scrapper", "api wrapper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video"
]
dependencies = [
  "eaf-base-api",
  "m3u8",
  "selectolax",
  "chompjs>=1.4.1",
]

[project.optional-dependencies]
av = ["av"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/unofficial-api-for-redtube"
Repository = "https://github.com/EchterAlsFake/unofficial-api-for-redtube"
"Bug Tracker" = "https://github.com/EchterAlsFake/unofficial-api-for-redtube/issues"

[tool.uv.build-backend]
module-name = "redtube_api"
module-root = ""
