[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "unofficial-api-for-redtube"
version = "1.2"
description = "An asynchronous API wrapper and scraper for redtube.com"
authors = [
  {name = "EchterAlsFake", email = "EchterAlsFake@proton.me"}
]
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    "api",
    "scraper",
    "async",
    "asyncio",
    "video-downloader",
    "selectolax",
    "chompjs",
    "m3u8",
    "hls",
    "redtube"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video"
]
dependencies = [
  "eaf-base-api",
  "m3u8",
  "selectolax",
  "chompjs",
]

[project.optional-dependencies]
av = ["av"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/unofficial-api-for-redtube"
Repository = "https://github.com/EchterAlsFake/unofficial-api-for-redtube"
"Bug Tracker" = "https://github.com/EchterAlsFake/unofficial-api-for-redtube/issues"
"Support me on Ko-Fi" = "https://ko-fi.com/EchterAlsFake"
"Donate via PayPal" = "https://paypal.me/EchterAlsFake"
"Donate via Crypto" = "https://nowpayments.io/donation/EchterAlsFake"

[tool.uv.build-backend]
module-name = "redtube_api"
module-root = ""
